config-root/namespaces/jx-production/fmtok8s-c4p-rest/fmtok8s-c4p-rest-fmtok8s-c4p-rest-deploy.yaml
# Source: fmtok8s-c4p-rest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmtok8s-c4p-rest-fmtok8s-c4p-rest
  labels:
    draft: draft-app
    chart: "fmtok8s-c4p-rest-0.0.14"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: fmtok8s-c4p-rest-fmtok8s-c4p-rest
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: fmtok8s-c4p-rest-fmtok8s-c4p-rest
    spec:
      serviceAccountName: fmtok8s-c4p-rest-fmtok8s-c4p-rest
      containers:
        - name: fmtok8s-c4p-rest
          image: "gcr.io/camunda-researchanddevelopment/fmtok8s-c4p-rest:0.0.14"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1768Mi
            requests:
              cpu: 650m
              memory: 1024Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
